[package]
name = "bevy_mesh_outline"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Karl Gylleus <karl.gylleus@gmail.com>"]
repository = "https://github.com/gylleus/bevy_mesh_outline"
rust-version = "1.89.0"
description = "A Bevy plugin for rendering 3d mesh outlines."
categories = ["rendering", "game-engines"]
keywords = ["gamedev", "graphics", "bevy", "outline"]
exclude = [".github/", "assets/"]
readme = "README.md"

[dependencies]
bevy = { version = "0.18.0-rc.2", features = ["webgpu"] }
bevy_render = "0.18.0-rc.2"
rand = "0.9"
tracing = "0.1"
wgpu-types = "27"
bytemuck = "1"
nonmax = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[[example]]
name = "simple"
path = "examples/simple.rs"


[[example]]
name = "intersecting"
path = "examples/intersecting.rs"


[[example]]
name = "animated_mesh"
path = "examples/animated_mesh.rs"
